[bp/r21449] [FIX] Wrong background image url.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/proposed@21450 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/strasa/options/cold.css
+++ b/styles/strasa/options/cold.css
@@ -258,7 +258,7 @@ a.flip:hover {color: #006699}
 }
 
 .mdkitem a:hover {
-	background: transparent url('styles/cold/headerbg.jpg') repeat-x;
+	background: transparent url(cold/headerbg.jpg) repeat-x;
 	color: #fff;
 }
 
@@ -627,7 +627,7 @@ a.pagetitle:hover {
 }
 
 .wikitext .fancylist li {
-	background: transparent url('strasa/list_icon.png') top left no-repeat;
+	background: transparent url(../list_icon.png) top left no-repeat;
 	color: #f90;
 }
 
@@ -745,7 +745,7 @@ div.articletitle h2 a:visited {
 }
 
 body.tiki_blogs .author_actions .actions {
-	background: url(strasa/login.jpg) no-repeat 100% 0;
+	background: url(cold/login.jpg) no-repeat 100% 0;
 }
 
 /***** Forums *****/
